# arch_wiki_rag

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
arch_wiki_rag/: cli.py
arch_wiki_rag/rag/: chunking.py  embeddings.py  fetch.py  ingestion.py  pipeline.py
tests/: test_chunking.py  test_cli.py  test_fetch.py
